ipc/ipdl/test/ipdl/error/InsideCpowToChild.ipdl
// inside_cpow nested parent-to-child messages are verboten

protocol InsideCpowToChild {
child:
    nested(inside_cpow) sync Msg();
};
